# draw_rna

./: .gitignore  README.md  draw_all.py  draw_from_rdat.py  draw_rna.py  example_input.txt  pyproject.toml  render_rna.py  render_rna_flip.py  requirements.txt  setup.py  svg.py
.github/workflows/: release.yml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
draw_rna/: draw.py  draw_all.py  draw_from_rdat.py  draw_rna.py  mpl.py  render_rna.py  render_rna_flip.py  svg.py
example_files/: covid19_5primeUTR.txt  example_cm_construct.txt  notebook_demo.ipynb
example_files/.ipynb_checkpoints/: notebook_demo-checkpoint.ipynb
example_files/command_line/: R69_297_data.txt  R69_303_data.txt  aptamer_examples.txt  example_input.txt  perc_conserved_5UTR.txt
ipynb/: draw.py
src/draw_rna/: draw.py  draw_all.py  draw_utils.py  inv_utils.py  ipynb_draw.py  mpl.py  render_rna.py  render_rna_flip.py  svg.py
